--- a/main.html
+++ b/main.html
@@ -4,6 +4,10 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<h1>Time, Space, Complexity</h1>
+	<p>Time complexity, efficient</p>
+	<p>Space Complexity, O(n)</p>
+	<b>Space Complexity</b>
 </head>
 
 <body>
